am adaugat toate entitatile

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=server
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=facebook_schema
 spring.datasource.username=postgres
-spring.datasource.password=omega1234
+spring.datasource.password=bogdan
 spring.jpa.show-sql=true
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
