--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -109,6 +109,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>10.8.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
