--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "crypto-js": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
